--- a/daily/2025-12-30.md
+++ b/daily/2025-12-30.md
@@ -1,8 +1,82 @@
 ---
 date: 2025-12-30
-tags: [daily]
+tags:
+  - daily
 ---
 
 # 2025-12-30
 
 ## 今日学んだこと
+- [[.zshrc]] の設定
+- [[alacritty]]の設定
+- tmux の設定
+
+
+### .zshrc の設定
+
+[[oh my zsh]] をインストールすることで簡単にいい感じのターミナルの設定を得られる
+
+```
+sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
+```
+
+ただインストールするとPATHが勝手に書き換えられて
+claude code が動かなくなった
+
+不要なコメントもたくさん見られたのでインストールしたあとは一度 .zshrc を確認するといいかもしれない
+
+ZSH_THEME="eastwood" は見た目がいい感じ
+
+### alacritty の設定
+ターミナルの設定ファイルを作成してそちらに設定をプログラミングっぽく書いていける
+
+`~/.config/alacritty/alacritty.toml`に記述
+
+こちらの記事をほぼ丸コピー
+https://zenn.dev/ring_belle/books/mac-environment/viewer/shell-oh-my-zsh
+
+`startup_mode` が fullscreen だと透過したように見えなかったので maximized に変更した
+font を HackGen に変更した
+
+このあたりはよくわからない部分もあったが claude code に聞きながらやったら設定できた
+
+
+```
+[general]
+import = [
+    "~/.config/alacritty/themes/themes/duskfox.toml"
+]
+
+[window]
+padding = { x = 4, y = 2 }
+blur = true
+decorations = "Buttonless"
+startup_mode = "Maximized"
+opacity = 0.75
+
+[scrolling]
+history = 100000
+multiplier = 5
+
+[font]
+size = 11.0
+offset = { x = 0, y = 4 }
+normal = { family = "HackGen Console", style="Regular" }
+bold = { family = "HackGen Console", style="Bold" }
+italic = { family = "HackGen Console", style="Regular" }
+bold_italic = { family = "HackGen Console", style="Bold" }
+```
+
+
+### tmux の設定
+
+tmux  を使ってマウスを使用せず画面を操作できるようになった
+いまいちよくわかってないので明日ちゃんと調べる
+
+とりあえず ターミナルをいい感じに操作できるということはわかった
+
+## 今日できたこと
+- obsidian の導入
+- 開発環境の整備
+	- 開発ツールDBの作成
+
